--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "chart.js": "^4.3.3",
+    "connectkit": "^1.5.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "viem": "^1.16.4",
+    "wagmi": "^1.4.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
